# playground-ml

./: README.md  pyproject.toml
playground/: pyproject.toml
playground/app/: server.py
src/: main.py
