[project]
name = "playground-ml"
version = "0.1.0"
description = ""
authors = []
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "langchain-cli>=0.0.31",
]

[tool.rye.workspace]
members = ["playground"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/playground_ml"]
