[project]
name = "playground"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "langchain>=0.3.7",
    "langchain-aws>=0.2.7",
    "langserve>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/playground"]
